--- a/index.html
+++ b/index.html
@@ -5,6 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Détecteur de Repas Végétarien</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+    <style>
+        /* Ajout d'un thème sombre */
+        body {
+            background-color: #121212;
+            color: #e0e0e0;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            text-align: center;
+            color: #4caf50;
+            margin: 20px 0;
+            font-size: 2.5rem;
+        }
+
+        h2 {
+            color: #81c784;
+        }
+
+        #output {
+            margin: 20px auto;
+            padding: 20px;
+            max-width: 600px;
+            background-color: #1e1e1e;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+            animation: fadeIn 1s ease;
+        }
+
+        div {
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 1rem;
+            line-height: 1.5;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        li {
+            background: #263238;
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 5px;
+            color: #ffffff;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        li:hover {
+            transform: scale(1.05);
+            background-color: #4caf50;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>Détecteur de Repas Végétarien</h1>
@@ -77,7 +147,16 @@
 
             for (const week in weeks) {
                 const weekDiv = document.createElement('div');
-                weekDiv.innerHTML = `<h2>Semaine ${week}</h2><p>Jours: ${weeks[week].join(', ')}</p>`;
+                weekDiv.innerHTML = `<h2>Semaine ${week}</h2>`;
+
+                const dayList = document.createElement('ul');
+                weeks[week].forEach(day => {
+                    const listItem = document.createElement('li');
+                    listItem.textContent = day;
+                    dayList.appendChild(listItem);
+                });
+
+                weekDiv.appendChild(dayList);
                 output.appendChild(weekDiv);
             }
         }
