--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Détecteur de Repas Végétarien</title>
+    <title>Végé-detector</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <style>
-        /* Ajout d'un thème sombre */
         body {
             background-color: #121212;
             color: #e0e0e0;
@@ -14,18 +13,13 @@
             margin: 0;
             padding: 0;
         }
-
         h1 {
             text-align: center;
             color: #4caf50;
             margin: 20px 0;
             font-size: 2.5rem;
         }
-
-        h2 {
-            color: #81c784;
-        }
-
+        h2 { color: #81c784; }
         #output {
             margin: 20px auto;
             padding: 20px;
@@ -35,133 +29,143 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
             animation: fadeIn 1s ease;
         }
-
-        div {
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 1rem;
-            line-height: 1.5;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
         li {
             background: #263238;
             margin: 5px 0;
             padding: 10px;
             border-radius: 5px;
             color: #ffffff;
+            cursor: pointer;
             transition: transform 0.3s ease, background-color 0.3s ease;
         }
-
         li:hover {
             transform: scale(1.05);
             background-color: #4caf50;
         }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(-10px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            display: none;
+            z-index: 9;
+        }
+        .popup {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0.9);
+            background: #1e1e1e;
+            color: #e0e0e0;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+            display: none;
+            width: 80%;
+            max-width: 400px;
+            text-align: center;
+            z-index: 10;
+            animation: popupFade 0.3s ease forwards;
+        }
+        .popup button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            background: #4caf50;
+            color: white;
+            font-size: 1rem;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .popup button:hover {
+            background: #388e3c;
+        }
+        @keyframes popupFade {
+            from { opacity: 0; transform: translate(-50%, -50%) scale(0.8); }
+            to { opacity: 1; transform: translate(-50%, -50%) scale(1); }
         }
     </style>
 </head>
 <body>
-    <h1>Détecteur de Repas Végétarien</h1>
+    <h1>Végé-detector par Luigiday et Nopy</h1>
     <div id="output"></div>
-
+    <div class="overlay" id="overlay" onclick="closePopup()"></div>
+    <div id="menuPopup" class="popup">
+        <p id="menuText"></p>
+        <button onclick="closePopup()">Fermer</button>
+    </div>
     <script>
-        // Fonction pour charger le fichier Excel en ligne
+        function getWeekRange(weekNumber) {
+            const startDate = new Date(2024, 11, 30);
+            const startOfWeek = new Date(startDate.getTime() + (weekNumber - 1) * 7 * 24 * 60 * 60 * 1000);
+            const endOfWeek = new Date(startOfWeek.getTime() + 6 * 24 * 60 * 60 * 1000);
+            const options = { day: '2-digit', month: '2-digit', year: 'numeric' };
+            return {
+                start: startOfWeek.toLocaleDateString('fr-FR', options),
+                end: endOfWeek.toLocaleDateString('fr-FR', options)
+            };
+        }
+
         async function fetchAndProcessFile() {
             try {
-                // Télécharger le fichier depuis l'URL
                 const response = await fetch('https://cuigi.github.io/vege-detecor/data.xlsx');
-                if (!response.ok) {
-                    throw new Error('Erreur lors du téléchargement du fichier');
-                }
-
+                if (!response.ok) throw new Error('Erreur lors du téléchargement du fichier');
                 const arrayBuffer = await response.arrayBuffer();
-
-                // Lire le contenu du fichier avec XLSX
                 const workbook = XLSX.read(new Uint8Array(arrayBuffer), { type: 'array' });
                 const firstSheetName = workbook.SheetNames[0];
                 const worksheet = workbook.Sheets[firstSheetName];
                 const jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
-
-                // Afficher les données
                 displayData(jsonData);
             } catch (error) {
                 console.error('Erreur:', error);
-                document.getElementById('output').innerHTML = '<p>Impossible de charger les données. Vérifiez le fichier ou l’URL.</p>';
+                document.getElementById('output').innerHTML = '<p>Impossible de charger les données.</p>';
             }
         }
 
         function displayData(data) {
             const output = document.getElementById('output');
             const weeks = {};
-
-            // Mapping des numéros de jour aux noms des jours de la semaine
-            const daysMap = {
-                1: 'Lundi',
-                2: 'Mardi',
-                3: 'Mercredi',
-                4: 'Jeudi',
-                5: 'Vendredi',
-                6: 'Samedi',
-                7: 'Dimanche'
-            };
-
-            // Commencer à partir de la deuxième ligne pour ignorer l'en-tête
+            const daysMap = { 1: 'Lundi', 2: 'Mardi', 3: 'Mercredi', 4: 'Jeudi', 5: 'Vendredi', 6: 'Samedi', 7: 'Dimanche' };
             data.slice(1).forEach(row => {
-                if (row.length < 2) return; // Sauter les lignes incomplètes
-
+                if (row.length < 4) return;
                 const week = row[0]?.toString().trim();
-                const dayNumber = parseInt(row[1], 10); // Numéro du jour
-
-                // Vérifier si le jour est valide
+                const dayNumber = parseInt(row[1], 10);
+                const menu = row[3];
                 const day = daysMap[dayNumber];
                 if (!week || !day) return;
-
-                if (!weeks[week]) {
-                    weeks[week] = [];
-                }
-
-                weeks[week].push(day);
+                if (!weeks[week]) weeks[week] = [];
+                weeks[week].push({ day, menu });
             });
 
             output.innerHTML = '';
-            if (Object.keys(weeks).length === 0) {
-                output.innerHTML = '<p>Aucun jour trouvé.</p>';
-                return;
-            }
-
             for (const week in weeks) {
+                const { start, end } = getWeekRange(parseInt(week, 10));
                 const weekDiv = document.createElement('div');
-                weekDiv.innerHTML = `<h2>Semaine ${week}</h2>`;
-
+                weekDiv.innerHTML = `<h2>Semaine ${week} (${start} - ${end})</h2>`;
                 const dayList = document.createElement('ul');
-                weeks[week].forEach(day => {
+                weeks[week].forEach(({ day, menu }) => {
                     const listItem = document.createElement('li');
                     listItem.textContent = day;
+                    listItem.onclick = () => openPopup(menu);
                     dayList.appendChild(listItem);
                 });
-
                 weekDiv.appendChild(dayList);
                 output.appendChild(weekDiv);
             }
         }
 
-        // Appeler la fonction pour charger et traiter le fichier au chargement de la page
+        function openPopup(menu) {
+            document.getElementById('menuText').textContent = menu;
+            document.getElementById('menuPopup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+        function closePopup() {
+            document.getElementById('menuPopup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
         fetchAndProcessFile();
     </script>
 </body>
